[package]
name = "term-sesh"
version = "0.1.8"
edition = "2021"
authors = ["Will Hopkins <willothyh@gmail.com>"]
license = "MIT"
description = "Unix terminal session manager"
repository = "https://github.com/willothy/sesh"
readme = "README.md"
documentation = "https://docs.rs/term-sesh"

[[bin]]
name = "seshd"
path = "server/main.rs"

[[bin]]
name = "sesh"
path = "client/main.rs"

[dependencies]
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread", "signal"] }
tokio-stream = { version = "0.1.12", features = ["fs", "io-util", "net", "sync"] }
tonic = {version = "0.9.2", features = ["transport"]}
tower = { version = "0.4.13", features = ["tokio", "tokio-stream"] }
anyhow = "1.0.70"
libc = "0.2.141"
prost = "0.11.9"
termion = "2.0.1"
clap = { version = "4.2.3", features = ["derive"] }
serde = { version = "1.0.160", features = ["derive"] }
ctrlc = "3.2.5"
dirs = "5.0.0"
once_cell = "1.17.1"
log = "0.4.17"
env_logger = "0.10.0"
dialoguer = { version = "0.10.4", features = ["completion", "history", "fuzzy-select"] }
chrono = "0.4.24"
prettytable = "0.10.0"
sesh-shared = { path = "./shared", version = "0.1.4" }
sesh-proto = { path = "./proto", version = "0.1.3" }
sesh-cli = { path = "./cli", version = "0.1.4" }

[build-dependencies]
sesh-cli = { path = "./cli", version = "0.1.4" }
clap-markdown = "0.1.3"
which = "4.4.0"
anyhow = "1.0.70"

[workspace]
members = [
	"proto",
	"shared",
	"cli",
]

