[package]
name = "term-sesh"
version = "0.1.10"
edition = "2021"
authors = ["Will Hopkins <willothyh@gmail.com>"]
license = "MIT"
description = "Unix terminal session manager"
repository = "https://github.com/willothy/sesh"
readme = "README.md"
documentation = "https://docs.rs/term-sesh"

[[bin]]
name = "seshd"
path = "server/main.rs"

[[bin]]
name = "sesh"
path = "client/main.rs"

[dependencies]
tokio = { version = "1.32.0", features = [
	"macros",
	"rt-multi-thread",
	"signal",
] }
tokio-stream = { version = "0.1.14", features = [
	"fs",
	"io-util",
	"net",
	"sync",
] }
tonic = { version = "0.9.2", features = ["transport"] }
tower = { version = "0.4.13", features = ["tokio", "tokio-stream"] }
anyhow = "1.0.75"
libc = "0.2.147"
prost = "0.11.9"
termion = "2.0.1"
clap = { version = "4.4.1", features = ["derive"] }
serde = { version = "1.0.188", features = ["derive"] }
ctrlc = "3.4.0"
dirs = "5.0.1"
once_cell = "1.18.0"
log = "0.4.20"
env_logger = "0.10.0"
dialoguer = { version = "0.10.4", features = [
	"completion",
	"history",
	"fuzzy-select",
] }
chrono = "0.4.28"
prettytable = "0.10.0"
serde_json = "1.0.105"
sesh-shared = { path = "./shared", version = "0.1.10" }
sesh-proto = { path = "./proto", version = "0.1.10" }
sesh-cli = { path = "./cli", version = "0.1.10" }

[build-dependencies]
sesh-cli = { path = "./cli", version = "0.1.10" }
clap-markdown = "0.1.3"
which = "4.4.0"
anyhow = "1.0.75"

[workspace]
members = ["proto", "shared", "cli"]
