[package]
name = "term-sesh"
version = "0.1.12"
edition = "2021"
authors = ["Will Hopkins <willothyh@gmail.com>"]
license = "MIT"
description = "Unix terminal session manager"
repository = "https://github.com/willothy/sesh"
readme = "README.md"
documentation = "https://docs.rs/term-sesh"

[[bin]]
name = "seshd"
path = "server/main.rs"

[[bin]]
name = "sesh"
path = "client/main.rs"

[dependencies]
tokio = { version = "1.33.0", features = [
	"macros",
	"rt-multi-thread",
	"signal",
] }
tokio-stream = { version = "0.1.14", features = [
	"fs",
	"io-util",
	"net",
	"sync",
] }
tonic = { version = "0.10.2", features = ["transport"] }
tower = { version = "0.4.13", features = ["tokio", "tokio-stream"] }
anyhow = "1.0.75"
libc = "0.2.149"
prost = "0.12.1"
termion = "2.0.1"
clap = { version = "4.4.7", features = ["derive"] }
serde = { version = "1.0.190", features = ["derive"] }
ctrlc = "3.4.1"
dirs = "5.0.1"
once_cell = "1.18.0"
log = "0.4.20"
env_logger = "0.10.0"
dialoguer = { version = "0.11.0", features = [
	"completion",
	"history",
	"fuzzy-select",
] }
chrono = "0.4.31"
prettytable = "0.10.0"
serde_json = "1.0.107"
sesh-shared = { path = "./shared", version = "0.1.12" }
sesh-proto = { path = "./proto", version = "0.1.12" }
sesh-cli = { path = "./cli", version = "0.1.12" }
dashmap = "5.5.3"
termwiz = { version = "0.22.0", features = ["serde", "image", "fnv"] }

[build-dependencies]
sesh-cli = { path = "./cli", version = "0.1.12" }
clap-markdown = "0.1.3"
which = "5.0.0"
anyhow = "1.0.75"

[workspace]
members = ["proto", "shared", "cli"]
