[package]
name = "sesh-cli"
version = "0.1.1"
edition = "2021"
authors = ["Will Hopkins <willothyh@gmail.com>"]
license = "MIT"
description = "CLI crate for Sesh, a Unix terminal session manager"
readme = "../README.md"
repository = "https://github.com/willothy/sesh"
documentation = "https://docs.rs/term-sesh"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.2.4", features = ["derive"] }
