[package]
name = "sesh-cli"
version = "0.1.10"
edition = "2021"
authors = ["Will Hopkins <willothyh@gmail.com>"]
license = "MIT"
description = "CLI crate for Sesh, a Unix terminal session manager"
readme = "../README.md"
repository = "https://github.com/willothy/sesh"
documentation = "https://docs.rs/term-sesh"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.1", features = ["derive"] }
