[package]
name = "sesh"
version = "0.1.0"
edition = "2021"
authors = ["Will Hopkins <willothyh@gmail.com>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread", "signal"] }
tokio-stream = { version = "0.1.12", features = ["fs", "io-util", "net", "sync"] }
tonic = {version = "0.9.2", features = ["transport"]}
tower = { version = "0.4.13", features = ["tokio", "tokio-stream"] }
anyhow = "1.0.70"
libc = "0.2.141"
prost = "0.11.9"
termion = "2.0.1"
sesh-shared = { path = "../shared" }
sesh-proto = { path = "../proto" }
clap = { version = "4.2.3", features = ["derive"] }
serde = { version = "1.0.160", features = ["derive"] }
ctrlc = "3.2.5"
dirs = "5.0.0"
once_cell = "1.17.1"
