[package]
name = "sesh-proto"
version = "0.1.4"
edition = "2021"
authors = ["Will Hopkins <willothyh@gmail.com>"]
license = "MIT"
description = "Protobuf definition crate for Sesh, a Unix terminal session manager"
readme = "../README.md"
repository = "https://github.com/willothy/sesh"
documentation = "https://docs.rs/term-sesh"

[dependencies]
prost = "0.11.9"
tonic = {version = "0.9.2", features = ["transport"]}

[build-dependencies]
tonic-build = "0.9.2"

