[package]
name = "sesh-shared"
version = "0.1.3"
edition = "2021"
authors = ["Will Hopkins <willothyh@gmail.com>"]
license = "MIT"
description = "Shared library crate for Sesh, a Unix terminal session manager"
readme = "../README.md"
repository = "https://github.com/willothy/sesh"
documentation = "https://docs.rs/term-sesh"

[dependencies]
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread", "signal"] }
tokio-stream = { version = "0.1.12", features = ["fs", "io-util", "net", "sync"] }
tonic = {version = "0.9.2", features = ["transport"]}
tower = { version = "0.4.13", features = ["tokio", "tokio-stream"] }
anyhow = "1.0.70"
libc = "0.2.141"
prost = "0.11.9"
termion = "2.0.1"
sesh-proto = { path = "../proto", version = "0.1.1" }
